[metadata]
name = rapid

[options]
py_modules =
    runrapid
    rapid_cli
    rapid_corestatstest
    rapid_defaults
    rapid_flowsizetest
    rapid_generator_machine
    rapid_impairtest
    rapid_irqtest
    rapid_k8s_deployment
    rapid_k8s_pod
    rapid_log
    rapid_machine
    rapid_parser
    rapid_portstatstest
    rapid_sshclient
    rapid_test
    rapid_warmuptest
    prox_ctrl
install_requires =
    future
    pyyaml
    requests
    paramiko
    scp
